v0 working : can export pdf with no options

--- a/PandocGui/App.axaml
+++ b/PandocGui/App.axaml
@@ -7,6 +7,7 @@
     </Application.DataTemplates>
 
     <Application.Styles>
+        <StyleInclude Source="avares://AvaloniaProgressRing/Styles/ProgressRing.xaml"/>
         <FluentTheme Mode="Dark"/>
     </Application.Styles>
 </Application>
