--- a/PandocGui/Views/MainWindow.axaml
+++ b/PandocGui/Views/MainWindow.axaml
@@ -3,7 +3,10 @@
         xmlns:vm="using:PandocGui.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+        xmlns:avaloniaProgressRing="clr-namespace:AvaloniaProgressRing;assembly=AvaloniaProgressRing"
+        mc:Ignorable="d" d:DesignWidth="200" d:DesignHeight="600"
+        Width="350" Height="400"
+        MinWidth="350"
         x:Class="PandocGui.Views.MainWindow"
         Icon="/Assets/avalonia-logo.ico"
         Title="PandocGui">
@@ -14,38 +17,52 @@
     <Border Padding="16">
         <DockPanel>
             <StackPanel DockPanel.Dock="Top" Spacing="16">
-                <TextBlock HorizontalAlignment="Center">Input file :</TextBlock>
-                <StackPanel
-                    HorizontalAlignment="Center"
-                    Orientation="Horizontal"
-                    Spacing="16">
-                    
-                    <TextBox Width="200" x:Name="searchSourceFileInput"/>
-                    <Button x:Name="searchSourceFileButton">
-                        <TextBlock Text="Search File" />
-                    </Button>
-                </StackPanel>
-                
-                <TextBlock HorizontalAlignment="Center">Output file :</TextBlock>
-                <StackPanel
-                    HorizontalAlignment="Center"
-                    Orientation="Horizontal"
-                    Spacing="16">
-                    <TextBox Width="200" x:Name="searchTargetFileInput"/>
-                    <Button x:Name="searchTargetFileButton">
-                        <TextBlock Text="Search File" />
-                    </Button>
-                </StackPanel>
+                <StackPanel HorizontalAlignment="Center">
+                    <TextBlock>Input file :</TextBlock>
+                    <StackPanel
+                        HorizontalAlignment="Center"
+                        Orientation="Horizontal"
+                        Spacing="16">
 
-
+                        <TextBox Width="200" x:Name="searchSourceFileInput" />
+                        <Button x:Name="searchSourceFileButton">
+                            <TextBlock Text="Search File" />
+                        </Button>
+                    </StackPanel>
+                </StackPanel>
+                <StackPanel HorizontalAlignment="Center">
+                    <TextBlock>Output file :</TextBlock>
+                    <StackPanel
+                        HorizontalAlignment="Center"
+                        Orientation="Horizontal"
+                        Spacing="16">
+                        <TextBox Width="200" x:Name="searchTargetFileInput" />
+                        <Button x:Name="searchTargetFileButton">
+                            <TextBlock Text="Search File" />
+                        </Button>
+                    </StackPanel>
+                </StackPanel>
+    
             </StackPanel>
-            <Button 
+
+
+            <Button
                 x:Name="exportButton"
+                HorizontalContentAlignment="Center"
                 VerticalAlignment="Bottom"
                 Background="#0066CC"
                 DockPanel.Dock="Bottom" HorizontalAlignment="Center">
                 <TextBlock TextAlignment="Center" Width="100" Text="Export" />
             </Button>
+            <avaloniaProgressRing:ProgressRing
+                x:Name="loader"
+                DockPanel.Dock="Bottom"
+                Width="40"
+                Height="40"
+                IsActive="True"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Bottom"
+                Foreground="#0066CC"/>
         </DockPanel>
     </Border>
 </Window>
