--- a/PandocGui/App.axaml
+++ b/PandocGui/App.axaml
@@ -1,7 +1,11 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="using:PandocGui"
+             xmlns:sty="using:FluentAvalonia.Styling"
+             xmlns:ui="using:FluentAvalonia.UI.Controls"
+             xmlns:uip="using:FluentAvalonia.UI.Controls.Primitives"
              x:Class="PandocGui.App">
+    <sty:FluentAvaloniaTheme />
     <Application.DataTemplates>
         <local:ViewLocator />
     </Application.DataTemplates>
