--- a/src/PandocGui/Views/MainWindow.axaml
+++ b/src/PandocGui/Views/MainWindow.axaml
@@ -69,8 +69,9 @@
                     <Expander Header="Code Highlight" Grid.Column="1" Grid.Row="1">
                         <StackPanel HorizontalAlignment="Center">
                             <Grid>
+                                <Grid.ColumnDefinitions>2*,*,*</Grid.ColumnDefinitions>
                                 <TextBlock VerticalAlignment="Center">Code Highlight Theme :</TextBlock>
-                                <ToggleSwitch VerticalAlignment="Center" HorizontalAlignment="Right"
+                                <ToggleSwitch Grid.Column="2"
                                               x:Name="highlightToggle" />
                             </Grid>
 
@@ -89,23 +90,22 @@
 
                         <StackPanel>
                             <Grid Width="305">
+                                <Grid.RowDefinitions>*,*,*,*</Grid.RowDefinitions>
+                                <Grid.ColumnDefinitions>2*,*,*</Grid.ColumnDefinitions>
                                 <TextBlock VerticalAlignment="Center">Headers Numbering :</TextBlock>
-                                <ToggleSwitch VerticalAlignment="Center" HorizontalAlignment="Right"
+                                <ToggleSwitch Grid.Column="2"
                                               x:Name="headersNumberingToggle" />
-                            </Grid>
-                            <Grid Width="305">
-                                <TextBlock VerticalAlignment="Center">Table of Content :</TextBlock>
-                                <ToggleSwitch VerticalAlignment="Center" HorizontalAlignment="Right"
+                                
+                                <TextBlock Grid.Row="1" VerticalAlignment="Center">Table of Content :</TextBlock>
+                                <ToggleSwitch Grid.Column="2" Grid.Row="1"
                                               x:Name="contentTableToggle" />
-                            </Grid>
-                            <Grid Width="305">
-                                <TextBlock VerticalAlignment="Center">Custom Font :</TextBlock>
-                                <ToggleSwitch VerticalAlignment="Center" HorizontalAlignment="Right"
+                        
+                                <TextBlock Grid.Row="2" VerticalAlignment="Center">Custom Font :</TextBlock>
+                                <ToggleSwitch Grid.Column="2" Grid.Row="2"
                                               x:Name="customFontToggle" />
-                            </Grid>
-                            <Grid Width="305">
-                                <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center">Custom Font Name :</TextBlock>
-                                <ComboBox HorizontalAlignment="Right" Width="150" x:Name="fontNameCombobox">
+                          
+                                <TextBlock Grid.Row="3" HorizontalAlignment="Left" VerticalAlignment="Center">Custom Font Name :</TextBlock>
+                                <ComboBox Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="3" Width="150" x:Name="fontNameCombobox">
                                     <ComboBox.ItemTemplate>
                                         <DataTemplate>
                                             <TextBlock Text="{Binding}" />
